import mongoose from "mongoose";

const userSchema = mongoose.Schema({
    fullName: {
        type: String,
        required: [true, "Full name is required"],
        trim: true,
    },
    email: {
        type: String,
        required: [true, "Email is required"],
        trim: true,
        unique: [true, "Email must be unique!"],
        minlength: [5, "Email must have at least 5 characters"],
        lowercase: true
    },
    password: {
        type: String,
        required: function () {
            return !this.googleId; // Google users authenticate via OAuth, not a local password
        }, trim: true,
        select: false
    },
    // password: {
    //     type: String,
    //     required: true,
    //     trim: true,
    //     select: false
    // },
    roles: {
        type: [String],
        enum: ["admin", "user"],
        required: true,
        trim: true,
        default: ["user"]
    },
    googleId: {
        type: String,
        required: false
    },
    verified: {
        type: Boolean,
        default: false
    },
    verificationCode: {
        type: String,
        select: false
    },
    verificationCodeValidation: {
        type: Number,
        default: false
    },
    forgotPasswordCode: {
        type: String,
        select: false
    },
    forgotPasswordCodeValidation: {
        type: Number,
        default: false
    }

    // TODO: Logic for confirm Password (2nd time password is entered)
}, {
    timestamps: true
})

const User = mongoose.model('User', userSchema)

export default User;