// ==========================================
// 1. USERS COLLECTION
// ==========================================
Table users {
  _id objectid [pk, note: 'Primary Key auto-generated by MongoDB']
  fullName string [not null]
  email string [not null, unique, note: 'Lowercase, minlength: 5']
  password string [note: 'Conditional requirement (omitted for OAuth users), select: false']
  roles "string[]" [not null, default: `['user']`, note: 'Enum array: admin, user']
  googleId string
  verified boolean [default: false]
  verificationCode string [note: 'select: false']
  verificationCodeValidation number [default: 0]
  forgotPasswordCode string [note: 'select: false']
  forgotPasswordCodeValidation number [default: 0]
  createdAt timestamp
  updatedAt timestamp
}

// ==========================================
// 2. COURSES COLLECTION
// ==========================================
Table courses {
  _id objectid [pk]
  title string [not null]
  category string [not null]
  description string
  status string [default: 'draft', note: 'Enum: draft, pending, approved, rejected']
  oldPrice decimal
  price decimal [not null]
  tags "string[]" [default: `[]`]
  imageUrl string [not null]
  publicId string [not null, note: 'Cloudinary media identifier']
  createdBy objectid [not null, note: 'References users._id']
  createdAt timestamp
  updatedAt timestamp
}

// ==========================================
// 3. CATALOGS COLLECTION
// ==========================================
Table catalogs {
  _id objectid [pk]
  title string [not null]
  category string [not null]
  description string
  oldPrice decimal
  newPrice decimal [not null]
  isBestSeller boolean
  tags "string[]" [default: `[]`]
  instructor string [not null]
  rating double [not null]
  reviewsCount int
  imageUrl string [not null]
  publicId string [not null, note: 'Cloudinary media identifier']
  createdAt timestamp
  updatedAt timestamp
}

// ==========================================
// 4. ENROLLMENTS COLLECTION (Junction Table)
// ==========================================
Table enrollments {
  _id objectid [pk]
  user objectid [not null, note: 'References users._id']
  course objectid [not null, note: 'References courses._id']
  role string [not null, note: 'Enum: student, instructor']
  createdAt timestamp
  updatedAt timestamp
}

// ==========================================
// 5. OAUTH TOKENS COLLECTION
// ==========================================
Table oauth_tokens {
  _id objectid [pk]
  accessToken string [not null]
  refreshToken string [not null]
  provider string [not null, note: 'Enum: google, github, microsoft']
  expiryDate date [not null]
  userId objectid [not null, note: 'References users._id']
  createdAt timestamp
  updatedAt timestamp

  Indexes {
    (userId, provider) [unique, name: "userId_provider_unique_index"]
  }
}

// ==========================================
// RELATIONSHIPS & DATA LINEAGE
// ==========================================

// A User can create many courses (One-to-Many)
Ref: courses.createdBy > users._id [delete: cascade]

// Enrollments handles Many-to-Many logic between Users and Courses
Ref: enrollments.user > users._id [delete: cascade]
Ref: enrollments.course > courses._id [delete: cascade]

// OAuth Token maps to an authenticating User
Ref: oauth_tokens.userId > users._id [delete: cascade]
